syntax = "proto3";
package resource_browser;

service ResourceBrowser {
  rpc GetRuntimeSceneInfo(GetRuntimeSceneInfoRequest) returns (GetRuntimeSceneInfoResponse);
}

message GetRuntimeSceneInfoRequest {
  string resource_id = 1;
}
message GetRuntimeSceneInfoResponse {
  string manifest_id = 1;
  string asset_id = 2;
}
